--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,5 +93,8 @@
 
     <!-- Strings related to Notification preference -->
     <string name="pref_last_notification">last_notification</string>
+    <string name="empty_forecast_list">No Weather Information Available</string>
+
+    <string name="network_not_available">No Weather Information Available.The network is not available to fetch weather data</string>
 
 </resources>
